crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__tokenizer__tests__handles_invalid_string_literal.snap
---
source: crates/auryn-compiler/src/auryn/tokenizer.rs
expression: "tokenize(\"\\\"\")"
---
[
    Token {
        kind: StringLiteral,
        text: "\"",
    },
]
