crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__tokenizer__tests__rejects_unicode_whitespace.snap
---
source: crates/auryn-compiler/src/auryn/tokenizer.rs
expression: "tokenize(\"\\u{a0}\")"
---
[
    Token {
        kind: Error,
        text: "\u{a0}",
    },
]
