crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__tokenizer__tests__tokenizer-3.snap
---
source: crates/auryn-compiler/src/auryn/tokenizer.rs
expression: "tokenize(\" \\n \\t\\n \")"
---
[
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
    Token {
        kind: Whitespace,
        text: " \t",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
]
