crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__tokenizer__tests__tokenizer-8.snap
---
source: crates/auryn-compiler/src/auryn/tokenizer.rs
expression: "tokenize(\"a *= b += c -= 3 / /= 1 // test\")"
---
[
    Token {
        kind: Identifier,
        text: "a",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: TimesAssign,
        text: "*=",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "b",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: PlusAssign,
        text: "+=",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "c",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: MinusAssign,
        text: "-=",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: NumberLiteral,
        text: "3",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Divide,
        text: "/",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: DivideAssign,
        text: "/=",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: NumberLiteral,
        text: "1",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Comment,
        text: "// test",
    },
]
