crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__tokenizer__tests__tokenizer-9.snap
---
source: crates/auryn-compiler/src/auryn/tokenizer.rs
expression: "tokenize(\"before comment // commment text \\n after comment\")"
---
[
    Token {
        kind: Identifier,
        text: "before",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "comment",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Comment,
        text: "// commment text ",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "after",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "comment",
    },
]
