crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__tokenizer__tests__tokenizer.snap
---
source: crates/auryn-compiler/src/auryn/tokenizer.rs
expression: "tokenize(\" 1 +4  \\n\")"
---
[
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: NumberLiteral,
        text: "1",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Plus,
        text: "+",
    },
    Token {
        kind: NumberLiteral,
        text: "4",
    },
    Token {
        kind: Whitespace,
        text: "  ",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
]
